--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "az-dev-base",
-  "version": "1.0.0",
-  "description": "A general purpose seed project base",
-  "main": "dist/library/index.js",
+  "name": "ricio",
+  "version": "0.1.0",
+  "description": "Ricio",
+  "main": "index.js",
   "repository": {
     "type": "git"
   },
   "keywords": [
     "gulp",
-    "seed",
-    "boilerplate",
-    "kickstarter",
     "ES6",
     "6to5"
   ],
@@ -29,6 +26,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "axios": "^0.17.1",
     "az-gulp-env-lite": "git+https://github.com/xtforgame/az-gulp-env-lite#v0.4.0",
     "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
@@ -45,7 +43,8 @@
     "eslint-plugin-react": "^6.9.0",
     "gulp": "^3.9.1",
     "mocha": "^3.0.2",
-    "rimraf": "^2.5.4"
+    "rimraf": "^2.5.4",
+    "ws": "^4.1.0"
   },
   "false": {}
 }
